un peu de refactoring et cleaning